# anyclaw

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPARISON.md  COMPARISON_WITH_NANOBOT.md  DESKTOP_APP_IMPLEMENTATION_SUMMARY.md  DESKTOP_APP_INTEGRATION_ANALYSIS.md  FEATURES_SUMMARY.md  FINAL_REVIEW_REPORT.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE2_TAURI_SHELL.md  MESSAGE_TOOL_IMPLEMENTATION.md  MULTI_AGENT_COMPLETE.md  MULTI_AGENT_IDENTITY_ANALYSIS.md  MVP_IMPLEMENTATION_PLAN.md  README.md  STITCH_WEBSITE_PERFORMANCE_ANALYSIS.md  SUBAGENT_IMPLEMENTATION.md  TEST_REPORT.md  Thinking.md  project_context.md  test_cron.py  test_subagent.py
anyclaw/: .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_REPORT.md  DEV_COMPLETE_REPORT.md  README.md  build_sidecar.py  pyproject.toml  test_api.py
anyclaw/anyclaw/: __main__.py
anyclaw/anyclaw/agent/: __init__.py  checkpoint.py  compressor.py  context.py  history.py  logger.py  loop.py  sliding_window.py  subagent.py  summary.py  token_counter.py  token_limiter.py  tool_loop.py
anyclaw/anyclaw/agent/tools/: message.py  spawn.py
anyclaw/anyclaw/agents/: __init__.py  identity.py  manager.py  manager.py.backup
anyclaw/anyclaw/api/: __init__.py  deps.py  server.py  sse.py
anyclaw/anyclaw/api/routes/: __init__.py  agents.py  chats.py  config.py  cron.py  health.py  logs.py  memory.py  messages.py  providers.py  skills.py  tasks.py
anyclaw/anyclaw/api/services/: __init__.py  provider_tester.py
anyclaw/anyclaw/bus/: __init__.py  events.py  queue.py
anyclaw/anyclaw/channels/: __init__.py  base.py  cli.py  discord.py  feishu.py  manager.py  registry.py
anyclaw/anyclaw/cli/: __init__.py  agents_cmd.py  app.py  compress.py  config_cmd.py  mcp_cmd.py  memory.py  onboard.py  persona.py  security_cmd.py  serve_cmd.py  session_cmd.py  sidecar_cmd.py  skill_cmd.py  token.py  workspace.py
anyclaw/anyclaw/commands/: __init__.py  base.py  context.py  dispatcher.py  parser.py  permission.py  registry.py
anyclaw/anyclaw/commands/handlers/: __init__.py  agent_cmd.py  (+6 more)
anyclaw/anyclaw/config/: __init__.py  config.template.toml  loader.py  settings.py
anyclaw/anyclaw/core/: __init__.py  daemon.py  serve.py  session_pool.py
anyclaw/anyclaw/cron/: logs.py  parser.py  service.py  tool.py  types.py
anyclaw/anyclaw/memory/: __init__.py  automation.py  manager.py
anyclaw/anyclaw/providers/: __init__.py  base.py  zai.py  zai_detect.py
anyclaw/anyclaw/search/: __init__.py  analyzer.py  authorizer.py  cache.py  context.py  heuristics.py  tool.py
anyclaw/anyclaw/security/: __init__.py  credentials.py  network.py  path.py  sanitizers.py  validators.py
anyclaw/anyclaw/session/: __init__.py  archive.py  manager.py  models.py  project.py  records.py
anyclaw/anyclaw/skills/: __init__.py  base.py  converter.py  executor.py  loader.py  models.py  parser.py
anyclaw/anyclaw/templates/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  __init__.py  skill_template.md
anyclaw/anyclaw/tools/: __init__.py  base.py  decorators.py  filesystem.py  guards.py  memory.py  registry.py  search.py  shell.py  skill_tools.py
anyclaw/anyclaw/utils/: __init__.py  log_collector.py  logging_config.py
anyclaw/anyclaw/workspace/: __init__.py  bootstrap.py  manager.py  persona.py  templates.py
anyclaw/sessions/: default.jsonl  test_simple.jsonl
anyclaw/tests/: __init__.py  test_agent.py  test_agents_api.py  test_api_cron.py  test_bus.py  test_channels.py  test_compress.py  test_config.py  test_context_extractor.py  test_credentials.py  test_cron_logs.py  test_cron_parser.py  test_cron_resilience.py  test_cron_skill.py  test_daemon.py  test_docx_skill.py  test_exec_cwd.py  test_feishu_channel.py  test_filesystem_permissions.py  test_iteration_summary.py  test_llm_resilience.py  test_log_collector.py  test_log_persistence.py  test_logging_config.py  test_logs_api.py  test_memory.py  test_onboard.py  test_path_authorizer.py  test_path_guard.py  test_pdf_skill.py  test_persona.py  test_pptx_skill.py  test_query_analyzer.py  test_sanitizers.py  test_search_cache.py  test_search_heuristics.py  test_serve_manager.py  test_session_archive.py  test_session_concurrency.py  test_session_cwd.py  (+18 more)
anyclaw/tests/test_commands/: test_handlers.py  test_parser.py  test_registry.py
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/binaries/: .gitkeep
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: README.md  icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
(+524 files in other folders)
