[tool.poetry]
name = "anyclaw"
version = "0.1.0"
description = "AnyClaw - AI 智能体框架"
authors = ["AnyClaw Team"]
readme = "README.md"
packages = [{include = "anyclaw"}]
include = [
    {path = "anyclaw/templates/**/*", format = ["sdist", "wheel"]},
]

[tool.poetry.scripts]
anyclaw = "anyclaw.cli.app:app"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.12.0"
pydantic-settings = "^2.0.0"
typer = {extras = ["all"], version = "^0.20.0"}
rich = "^14.0.0"
litellm = "^1.82.1"
openai = ">=1.0.0"
mcp = ">=1.0.0"
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
