[tool.poetry]
name = "anyclaw"
version = "0.1.0"
description = "AnyClaw - AI 智能体框架"
authors = ["AnyClaw Team"]
readme = "README.md"
packages = [{include = "anyclaw"}]
include = [
    {path = "anyclaw/templates/**/*", format = ["sdist", "wheel"]},
]

[tool.poetry.scripts]
anyclaw = "anyclaw.cli.app:app"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.0"
pydantic-settings = "^2.0.0"
typer = {extras = ["all"], version = "^0.20.0"}
rich = "^14.0.0"
litellm = "^1.82.1"
openai = ">=1.0.0"
# IM Channel dependencies (optional)
httpx = ">=0.27.0"
websockets = ">=12.0"
# Python 3.11+ has built-in tomllib
# Process management for daemon mode
psutil = "^6.0.0"
# API Server and SSE
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sse-starlette = "^2.1.0"
# Credential encryption
cryptography = "^42.0.0"
# Document processing
python-docx = "^1.1.0"
pypdf = "^5.0.0"
pdfplumber = "^0.11.0"
reportlab = "^4.0.0"
# Spreadsheet processing
openpyxl = "^3.1.5"
pandas = "^3.0.1"
# Presentation processing
python-pptx = "^1.0.0"

[tool.poetry.extras]
feishu = ["lark-oapi"]
mcp-server = ["mcp"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.3.0"
tomli-w = "^1.0.0"  # 用于写入 TOML 配置
httpx = "^0.27.0"  # API testing
pyinstaller = ">=6.0.0,<7.0.0"  # 用于打包 sidecar

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
