[package]
name = "anyclaw-desktop"
version = "0.1.0"
description = "AnyClaw Desktop App"
authors = ["AnyClaw Team"]
edition = "2021"

[lib]
name = "anyclaw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["time"] }
log = "0.4"
tauri-plugin-log = "2"

[profile.release]
strip = true
lto = "thin"
opt-level = "s"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
